Final stages of 2.0.0

--- a/who-we-are/index.html
+++ b/who-we-are/index.html
@@ -4,13 +4,19 @@ layout: default
 <div class="content-container">
     <a name="brandy"></a>
     <div class="brandy-thomas content">
-        <h2>
-            Brandy Thomas
-        </h2>
+        <div class="bio-header">
+            <div class="image-container u-gradient-background bio-image">
+              <div class="maze-container">
+              </div>
+              <img alt="Picture of Brandy Thomas"
+                src="/media/profile-pics/brandy.png"
+                class="bio-image" />
+            </div>
+            <h2>
+                Brandy Thomas
+            </h2>
+        </div>
         <div class="brandy-thomas-copy">
-            <img alt="Picture of Brandy Thomas"
-            src="/media/brandy-solo.png"
-            class="bio-image" />
             <p>
                 Brandy found a passion for helping others as a teenager during her first job, which was of course in the customer service industry. She worked as a ticket office cashier at a local museum that brought a combination of education and entertainment to the community she grew up in.
             </p>
@@ -32,13 +38,19 @@ layout: default
 <div class="content-container">
     <a name="david"></a>
     <div class="david-brunow content">
-        <h2>
-            David Brunow
-        </h2>
+        <div class="bio-header">
+            <div class="image-container u-gradient-background bio-image">
+                <div class="maze-container">
+                </div>
+                <img alt="Picture of David Brunow"
+                src="/media/profile-pics/david.png"
+                class="bio-image" />
+            </div>
+            <h2>
+                David Brunow
+            </h2>
+        </div>
         <div class="david-brunow-copy">
-            <img alt="Picture of David Brunow"
-            src="/media/david-solo.png"
-            class="bio-image" />
             <p>
                 David Brunow defies classification. Throughout his life he has taken on many different types of roles and excelled at most of them (he wasn't very good at being a used car salesman). Lately, he has been consulting and building software for a large international company and building iOS apps. Before that, he held several different roles in a community bank: Audit Assistant, Compliance Officer, Bank Secrecy Act Officer, Assistant Vice President, Junior Executive Officer, Operations Manager, and Systems Administrator.
             </p>
@@ -55,17 +67,52 @@ layout: default
     </div>
 </div>
 <div class="content-container">
+    <a name="danielle"></a>
+    <div class="danielle-gaither content">
+        <div class="bio-header">
+            <div class="image-container u-gradient-background bio-image">
+                <div class="maze-container">
+                </div>
+                <img alt="Picture of Danielle Gaither"
+                src="/media/profile-pics/danielle.png"
+                class="bio-image" />
+            </div>
+            <h2>
+                Danielle Gaither
+            </h2>
+        </div>
+        <div class="danielle-gaither-copy">
+            <p>
+                Danielle has an eclectic background that includes operating rides at an amusement park, making cotton candy at the Texas State Fair, performing technical support for an internet service provider, and military service, just to name a few.
+            </p>
+            <p>
+                Even in roles that might not seem relevant to her current work as a developer of mobile and web apps, Danielle has learned many transferable skills that serve her well today. While working in technical support, Danielle learned how customers describe their problems and how that doesn’t always match official or technical terminology. This serves her well when translating requirements into code. From her time in the military and in customer-facing roles, Danielle has learned it is usually best to have a system in place for dealing with problems, since many problems are not as different as they might first appear.
+            </p>
+            <p>
+                In her spare time, Danielle enjoys reading, photography, and videography. She also serves as President of TechMill Denton, a nonprofit organization dedicated to growing and supporting Denton’s tech community.
+            </p>
+            <p>
+                Danielle has a Bachelor of Arts degree in Music from Texas Lutheran University, a Master of Science degree in Computer Science from the University of North Texas, and is in the final stages of a Doctor of Philosophy degree in Computer Science and Engineering from the University of North Texas.
+            </p>
+        </div>
+    </div>
+</div>
+<div class="content-container">
     <div class="shepherd-dog content">
         <h2>
             Why Do We Call Ourselves Shepherd Dog?
         </h2>
-        <div class="shepherd-dog-copy">
-            <div class="shepherd-dog-image">
-                <img src="/media/dignified-dozer-the-mascot.png" alt="Our Mascot, Dozer" />
-                <span class="image-caption">
-                    Dozer, Our Shepherd-Mutt Mascot
-                </span>
+        <div class="bio-header">
+            <div class="image-container bio-image">
+                <img  alt="Our Mascot, Dozer"
+                src="/media/profile-pics/dignified-dozer-the-mascot.png"
+                class="bio-image" />
             </div>
+            <label>
+                Dozer, Our Shepherd-Mutt Mascot
+            </label>
+        </div>
+        <div class="shepherd-dog-copy">
             <p>
                 We are Shepherd Dog for a few reasons:
             </p>
