--- a/who-we-are/index.html
+++ b/who-we-are/index.html
@@ -18,16 +18,16 @@ layout: default
         </div>
         <div class="brandy-thomas-copy">
             <p>
-                Brandy found a passion for helping others as a teenager during her first job, which was of course in the customer service industry. She worked as a ticket office cashier at a local museum that brought a combination of education and entertainment to the community she grew up in.
+                As the Operational Co-founder of Shepherd Dog, Brandy does a little bit of everything but mainly focuses on: Business Process Analysis, Requirements Documentation, Design, Project Management, Quality Assurance Testing, and the general responsibilities of running a business. Driven by her strong passion for helping others and little patience for dealing with bad technology she's out to make the lives of those around her a little easier on a daily basis by implementing technical solutions for "real people", and doing the dirty work that no one really wants to do has time for.
+            </p>
+            <p>
+                Brandy first found her passion for helping others as a teenager during her first job, which was of course in the customer service industry. She worked as a ticket office cashier at a local museum that brought a combination of education and entertainment to the community she grew up in.
             </p>
             <p>
                 While following that passion for helping others she found herself in many diverse roles which seemed to have two underlying commonalities: 1) Dive in and get things done with little guidance, and 2) Understand and communicate (and often times train others on) complex processes to very diverse audiences (for example, the President of Marketing vs. a Software Developer).
             </p>
             <p>
                 Throughout her career Brandy has held many different roles (Ticket Office Supervisor, Accounts Payable, HR/Accounting Assistant, Payroll Supervisor, Guest Services Manager, Account Manager, Implementation Project Manager, Software QA Tester, Technical Project Manager/BA) each requiring both the use of and training on various software applications. Experiencing first hand and watching the frustration of others when using these applications led her to her most recent roles analyzing business processes to identify and implement technical solutions for “real people.”
-            </p>
-            <p>
-                After several years of being the analyst and project manager she realized she wanted to make more of an impact in both the projects she's working on and in her community. In partnering with David to form Shepherd Dog she hopes to make the lives of others around her just a little easier on a daily basis.
             </p>
             <p>
                 Brandy has a Bachelors of Business Administration in General Business from the University of North Texas.
@@ -52,13 +52,19 @@ layout: default
         </div>
         <div class="david-brunow-copy">
             <p>
-                David Brunow defies classification. Throughout his life he has taken on many different types of roles and excelled at most of them (he wasn't very good at being a used car salesman). Lately, he has been consulting and building software for a large international company and building iOS apps. Before that, he held several different roles in a community bank: Audit Assistant, Compliance Officer, Bank Secrecy Act Officer, Assistant Vice President, Junior Executive Officer, Operations Manager, and Systems Administrator.
+                David Brunow defies classification. Throughout his life he has taken on many different types of roles and excelled at most of them (he wasn't very good at being a used car salesman). At Shepherd Dog, David is the lead on all technology decisions, handles hardware and software infrastructure, and writes a lot of code. He is skilled in Swift, Objective-C, Ruby, PHP, JavaScript, TypeScript, Java, Kotlin, C#, VB.NET, HTML, CSS, and SQL.
+            </p>
+            <p>
+                Before Shepherd Dog, he was consulting and building software for a large international company and building iOS apps. Before that, he held several different roles in a community bank: Audit Assistant, Compliance Officer, Bank Secrecy Act Officer, Assistant Vice President, Junior Executive Officer, Operations Manager, and Systems Administrator.
             </p>
             <p>
                 Each role has increased David's expertise. From his time as a Compliance Officer, he knows the language of regulatory documents and can read and understand how regulations affect all kinds of businesses. From his time as a Systems Administrator and through various side projects, he knows much about the hardware side of the technology world like servers, email, and mobile devices. From his time as a software developer and other various side projects, he knows all the parts of web and mobile programming. From his time as a Generator Mechanic and soldier in the United States Army he knows discipline and how to read schematics.
             </p>
             <p>
                 David's most valuable asset is that he has learned a framework for figuring out new things. New problems are always coming up, driven by changes in technology, regulation, and everything else in our world. David has repeatedly shown that he can solve those problems.
+            </p>
+            <p>
+                David has also taught courses in C#, Android Development, and iOS Development as an Adjunct Instructor at North Central Texas College.
             </p>
             <p>
                 David has a Bachelors of Science in Business Computer Information Systems from the University of North Texas.
@@ -123,9 +129,8 @@ layout: default
                 Second, shepherd dogs have an intense drive to take care of their charges and guide them in the right direction. We feel that we fill a similar role for our clients.
             </p>
             <p>
-                Third, we strive to be like a shepherd dog in our work – shepherd dogs are strong, loyal, smart, focused, attentive, hard-working, driven, and proud. These are traits which we want to embody.
+                Third, we strive to be like a shepherd dog in our work &mdash; shepherd dogs are strong, loyal, smart, focused, attentive, hard-working, driven, and proud. These are traits which we want to embody.
             </p>
         </div>
     </div>
-</div>
 </div>
