Minor tweaks to design and copy

--- a/who-we-are/index.html
+++ b/who-we-are/index.html
@@ -18,13 +18,13 @@ layout: default
         </div>
         <div class="brandy-thomas-copy">
             <p>
-                As the Operational Co-founder of Shepherd Dog, Brandy does a little bit of everything but mainly focuses on: Business Process Analysis, Requirements Documentation, Design, Project Management, Quality Assurance Testing, and the general responsibilities of running a business. Driven by her strong passion for helping others and little patience for dealing with bad technology she's out to make the lives of those around her a little easier on a daily basis by implementing technical solutions for "real people", and doing the dirty work that no one really wants to do has time for.
+                As the Operational Co-founder of Shepherd Dog, Brandy does a little bit of everything but mainly focuses on: Business Process Analysis, Requirements Documentation, Design, Project Management, Quality Assurance Testing, and the general responsibilities of running a business. Driven by her strong passion for helping others and little patience for dealing with bad technology she's out to make the lives of those around her a little easier on a daily basis by implementing technical solutions for "real people", and doing the dirty work that no one really wants to do or has time for.
             </p>
             <p>
                 Brandy first found her passion for helping others as a teenager during her first job, which was of course in the customer service industry. She worked as a ticket office cashier at a local museum that brought a combination of education and entertainment to the community she grew up in.
             </p>
             <p>
-                While following that passion for helping others she found herself in many diverse roles which seemed to have two underlying commonalities: 1) Dive in and get things done with little guidance, and 2) Understand and communicate (and often times train others on) complex processes to very diverse audiences (for example, the President of Marketing vs. a Software Developer).
+                While following that passion for helping others she found herself in many diverse roles which seemed to have two underlying commonalities: 1) Dive in and get things done with little guidance, and 2) Understand and communicate (and often times train others on) complex processes to very diverse audiences (for example, the Director of Marketing vs. a Software Developer).
             </p>
             <p>
                 Throughout her career Brandy has held many different roles (Ticket Office Supervisor, Accounts Payable, HR/Accounting Assistant, Payroll Supervisor, Guest Services Manager, Account Manager, Implementation Project Manager, Software QA Tester, Technical Project Manager/BA) each requiring both the use of and training on various software applications. Experiencing first hand and watching the frustration of others when using these applications led her to her most recent roles analyzing business processes to identify and implement technical solutions for “real people.”
